# Gloom

./: .clang-format  CMakeLists.txt  README.md
assets/shapes/: hexahedron.def
cmake/: clang_format.cmake  libraries.cmake
examples/: CMakeLists.txt
examples/box/: box.cpp
examples/texture/: texture.cpp
examples/triangle/: triangle.cpp
gloom/: CMakeLists.txt
gloom/common/: gloom.h  gloom_concepts.h  gloom_tools.cpp  gloom_tools.h
gloom/graphics/: graphics_types.cpp  graphics_types.def  graphics_types.h  graphics_wrappers.cpp  graphics_wrappers.h  graphics_wrappers.ipp  image.cpp  image.h  shaders.cpp  shaders.h
gloom/mathematics/: mathematics_types.h  shapes.cpp  shapes.h
gloom/window/: GLFW_window.cpp  GLFW_window.h
shaders/common/: plane.f.glsl  plane.v.glsl  plane_texture.f.glsl  plane_texture.v.glsl  position_color_2d.frag  position_color_2d.vert  position_color_uv_2d.frag  position_color_uv_2d.vert  position_normal_3d.vert  position_normal_color_3d.vert
